<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <include
            android:id="@+id/layout_toolbar"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">

            <TextView
                android:id="@+id/tv_label_open_ai_key"
                style="@style/TextViewLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_open_ai_key"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_label_key_saved_to_your_device"
                style="@style/TextViewLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/label_key_saved_to_your_device"
                android:textColor="@color/light_midnight_blue"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_open_ai_key" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_semi_rounded_accent"
                android:backgroundTint="@color/midnight_blue"
                android:hint="@string/hint_api_key"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/light_midnight_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_key_saved_to_your_device" />

            <TextView
                android:id="@+id/tv_label_max_length"
                style="@style/TextViewLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/label_max_length"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_api_key" />

            <TextView
                android:id="@+id/tv_label_max_number_of_tokens"
                style="@style/TextViewLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/label_max_number_of_tokens"
                android:textColor="@color/light_midnight_blue"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_max_length" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_token_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/bg_semi_rounded_accent"
                android:backgroundTint="@color/midnight_blue"
                android:hint="@string/hint_token_length"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/_12sdp"
                tools:text="@string/token_length"
                android:textColor="@color/white"
                android:textColorHint="@color/light_midnight_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_max_number_of_tokens" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update_settings"
                style="@style/StandardButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_44sdp"
                android:text="@string/btn_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_token_length"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/tv_app_version"
                style="@style/TextViewLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_32sdp"
                android:textColor="@color/grey_200"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_update_settings"
                tools:text="App Version 1.0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>